Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "description": "Genres: Action, Adventure, Drama, Fantasy, Psychological, Romance, Thriller\nTags:Isekai/Cult/Witch/Magic/Male Protagonist/Super Power/Elf/Heterosexual/Time Loop/Ensemble Cast/Primarily Adult Cast/Female Protagonist/Maids/Tomboy\nThe third season of <i>Re:Zero kara Hajimeru Isekai Seikatsu</i>. <br><br>\n\nA year has passed since Subaru’s victory at the Sanctuary. He savors a life of fulfillment while Emilia’s camp stands united for the royal selection—until a fateful letter arrives. Anastasia, a royal selection candidate, has invited Emilia to the Watergate City of Priestella. But as the party begins its journey, crisis stirs beneath the surface and Subaru meets a cruel fate once again.<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes:<br>\nThe first episode has an extended runtime of ~90 minutes, and received an early premiere at Anime Expo on July 5, 2024.</i>"
     },
     {
-      "id": "tt30777659",
+      "id": "tt15222080",
       "type": "series",
       "name": "BLUE LOCK Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163146-f2vYhmiGn6dM.png",
@@ -134,13 +134,6 @@
       "description": "Genres: Romance\nTags:Marriage/Office Lady/Fake Relationship/Kuudere/Heterosexual/Work/Seinen/Male Protagonist/Primarily Adult Cast/Female Protagonist/Rural\nTakuya and Rika are coworkers in a travel agency in Tokyo. They’re both single, but they don’t mind, since they’re introverts with fulfilling lives at home. Unfortunately, now their job is looking to staff an office in Siberia, and non-married employees are the first to be considered. Rika is desperate to avoid the transfer and goes to Takuya with an idea: if they pretend they’re getting married in a year, they can stay in Tokyo. The only problem is the two of them barely know each other! If these two quiet coworkers “fake” a relationship, will it turn into something real?<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt32812118",
-      "type": "series",
-      "name": "I’ll Become a Villainess Who Goes Down in History",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168139-nGLXIdSksKCI.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Isekai/Josei\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)"
-    },
-    {
       "id": "tt32792739",
       "type": "series",
       "name": "Yakuza Fiancé",
@@ -148,7 +141,14 @@
       "description": "Genres: Comedy, Drama, Romance\nTags:Female Protagonist/Yandere/Yakuza/Male Protagonist/Urban/Crime/Arranged Marriage/Seinen/Gore\nSomei Renji is Somei Yoshino’s grandfather and leader of the “Somei Group”, the Kansai region’s biggest yakuza group. When he arranges for her to be married to Miyama Kirishima, Yoshino has to move to “Miyama Clan” estate, the Kanto region’s biggest yakuza group. Kirishima warmly welcomes Yoshino and is such a pleasant, personable, and nice young man that nobody would suspect that he comes from a yakuza family. This puts Yoshino at ease even though she was initially feeling insecure in this unfamiliar place.<br>\n<br>\nBut then, a certain event leads to Yoshino witnessing the real Kirishima.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32542096",
+      "id": "tt32812118",
+      "type": "series",
+      "name": "I’ll Become a Villainess Who Goes Down in History",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168139-nGLXIdSksKCI.jpg",
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Isekai/Josei\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)"
+    },
+    {
+      "id": "tt2552230",
       "type": "series",
       "name": "Demon Lord 2099",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163135-NjvXyXvTYSHH.jpg",
@@ -169,7 +169,7 @@
       "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Female Harem/Shrine Maiden/Heterosexual/Found Family/Shounen\nUryuu Kamihate is a high school student striving to enter Kyoto University’s medical school. After being raised at an orphanage, Uryuu is taken in by the chief priest at Amagami Shrine, where he begins to live as a freeloader—and to cohabit with Yae, Yuna, and Asahi, the three beautiful shrine maiden sisters! What’s more, the condition he must meet in order to live at the shrine for free is to marry into the family and inherit the shrine! How will Uryuu overcome his marriage meetings with the three sisters as well as the many challenges that Amagami Shrine faces? So begins a miraculous rom-com about living under the same roof with three shrine maidens!<br>\n<br>\n(Source: Crunchyroll, edited)"
     },
     {
-      "id": "tt30970523",
+      "id": "tt1352421",
       "type": "series",
       "name": "Natsume Yuujinchou Shichi",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166611-MXGsOlPv2IKj.png",
@@ -218,18 +218,18 @@
       "description": "Genres: Drama, Fantasy, Romance\nTags:Josei/Female Protagonist/Politics/Love Triangle/Royal Affairs/Arranged Marriage/Heterosexual/Crossdressing\nNina, a girl living as an orphan in the Fortna Castle Town, happens to have eyes of the same deep blue hue as lapis lazuli—just like the God of the Stars. They’re also the same color as the eyes of the recently deceased Princess Alisha. For that reason, when the second prince of Fortna, Azure, discovers Nina, he ordains that she will live as the princess in Alisha’s place. As substitute princess and Priestess of the Stars, Nina is obligated to become the false bride of Sett, the first prince of the large neighboring nation of Galgada after the third month has passed. Despite being at the mercy of fate, Nina is just happy to feel needed by someone. What is it that her open, honest eyes see? The destinies of all the players on this stage begin to move when they make up their minds to protect the ones they love!<br>\n<br>\n(Source: Crunchyroll) "
     },
     {
-      "id": "tt33309777",
-      "type": "series",
-      "name": "Love Live! Superstar!! 3rd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-PYqyrtywELYr.jpg",
-      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
-    },
-    {
       "id": "tt32510166",
       "type": "series",
       "name": "Party kara Tsuihou sareta Sono Chiyushi, Jitsu wa Saikyou ni Tsuki",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174043-aHYSmA5B76TZ.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:\nThe story follows Raust, a healer who can only use one basic spell and is expelled from a first-class party for being too weak. While the leader of that party realizes how great his abilities actually are after hiring another healer, Raust finds new friends like Narsena who support him and his rise to the top.<br><br>\n(Source: Crunchyroll News)"
+    },
+    {
+      "id": "tt33309777",
+      "type": "series",
+      "name": "Love Live! Superstar!! 3rd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-PYqyrtywELYr.jpg",
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
     },
     {
       "id": "tt32832435",
@@ -271,7 +271,7 @@
       "type": "series",
       "name": "The Do-Over Damsel Conquers The Dragon Emperor",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b164299-7kSWXw3GzEVP.jpg",
-      "description": "Genres: Fantasy, Romance\nTags:Dragons/Heterosexual\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Fantasy, Romance\nTags:Heterosexual/Dragons\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32508529",
