Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -169,13 +169,6 @@
       "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Female Harem/Shrine Maiden/Heterosexual/Found Family/Shounen\nUryuu Kamihate is a high school student striving to enter Kyoto University’s medical school. After being raised at an orphanage, Uryuu is taken in by the chief priest at Amagami Shrine, where he begins to live as a freeloader—and to cohabit with Yae, Yuna, and Asahi, the three beautiful shrine maiden sisters! What’s more, the condition he must meet in order to live at the shrine for free is to marry into the family and inherit the shrine! How will Uryuu overcome his marriage meetings with the three sisters as well as the many challenges that Amagami Shrine faces? So begins a miraculous rom-com about living under the same roof with three shrine maidens!<br>\n<br>\n(Source: Crunchyroll, edited)"
     },
     {
-      "id": "tt1352421",
-      "type": "series",
-      "name": "Natsume Yuujinchou Shichi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166611-MXGsOlPv2IKj.png",
-      "description": "Genres: Drama, Fantasy, Slice of Life, Supernatural\nTags:Youkai/Iyashikei/Male Protagonist/Rural/Shoujo\nThe seventh season of <i>Natsume Yuujinchou.<br>"
-    },
-    {
       "id": "tt19244410",
       "type": "series",
       "name": "Demon Lord, Retry! R",
@@ -183,11 +176,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Isekai/Magic\nThe Demon Lord continues his adventure in this re-vamped series! After encountering the mysterious entity in the lowest level of the Bastille Dungeon, he sets out for Hellion Territory, where Grand Devils vie for domination of the realm. With the addition of a new advisor—the (seemingly) hopeless optimist Akane—the Demon Lord’s army grows even more colorful, and their hijinks even wackier.<br><br>\n(Source:  J-Novel Club)"
     },
     {
+      "id": "tt1352421",
+      "type": "series",
+      "name": "Natsume Yuujinchou Shichi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166611-MXGsOlPv2IKj.png",
+      "description": "Genres: Drama, Fantasy, Slice of Life, Supernatural\nTags:Youkai/Iyashikei/Male Protagonist/Rural/Shoujo\nThe seventh season of <i>Natsume Yuujinchou.<br>"
+    },
+    {
       "id": "tt32332642",
       "type": "series",
       "name": "Tsuma, Shougakusei ni Naru.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162785-kqAuHBdvX283.jpg",
-      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Heterosexual/Seinen/Iyashikei\nThe trials and tribulations of a single father, who one day meets the reincarnation of his deceased wife."
+      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Heterosexual/Seinen/Iyashikei\nThe story follows Keisuke Niijima—who lost his beloved wife, Takae, ten years ago—and their daughter, Mai. They have been in a state of despair since Takae's death. One evening, an elementary school girl visits the Niijima family claiming to be the reincarnation of Takae. At first they don’t believe her but the girl continues to give them information that only the family knows. Keisuke and Mai soon recognize her as Takae and the three begin to act together as a \"family.” <br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt33044444",
@@ -225,13 +225,6 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:\nThe story follows Raust, a healer who can only use one basic spell and is expelled from a first-class party for being too weak. While the leader of that party realizes how great his abilities actually are after hiring another healer, Raust finds new friends like Narsena who support him and his rise to the top.<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt13840232",
-      "type": "series",
-      "name": "Love Live! Superstar!! 3rd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-PYqyrtywELYr.jpg",
-      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
-    },
-    {
       "id": "tt32832435",
       "type": "series",
       "name": "Good Bye, Dragon Life",
@@ -239,10 +232,17 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Dragons/Rural/Male Protagonist/Monster Girl\nLong ago, the most ancient of divine dragons was slain by a human. The mighty dragon accepted its death when suddenly, it was reborn as Dolan, a man who lives in a quiet village. While spending another peaceful day toiling in the fields, he meets Celina, a half-human, half-snake creature looking for a partner. The unlikely duo become friends, but challenges lie ahead that threaten their new bond.\n<br><br>\n(Source: Cunchyroll)"
     },
     {
+      "id": "tt13840232",
+      "type": "series",
+      "name": "Love Live! Superstar!! 3rd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-PYqyrtywELYr.jpg",
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
+    },
+    {
       "id": "tt32501772",
       "type": "series",
       "name": "Saikyou no Shien-shoku [Wajutsushi] Dearu Ore wa Sekai Saikyou Clan wo Shitagaeru",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177104-bwUcnJaNsQGi.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177104-8fQUQdXGZG8j.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Psychological\nTags:Male Protagonist/Magic/Seinen/Swordplay\nNoel has grown up idolizing his grandfather, a legendary adventurer of the class known as Seekers. But when it comes time for Noel to set out on his own, much to his dismay, he turns out to be a Talker: a support class with meager abilities. But Noel’s got ambition in spades–and the smarts to match–so he’s determined to do whatever it takes to make the world know his name!<br>\n<br>\n(Source: Seven Seas Entertainment)"
     },
     {
@@ -257,7 +257,7 @@
       "type": "series",
       "name": "Kabushiki Gaisha Magi Lumiere",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171025-3HsBogFXuG1p.jpg",
-      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Shounen/Crossdressing\n“Magical Girl”— A profession that undertakes the work of exterminating a kind of natural disaster called “Kaii.” Kana Sakuragi, a female college student who struggles with job hunting, is picked up by a magical girl startup company and…?! Magical Girl work-life starts now!\n<br><br>\n(Source: MANGA Plus)"
+      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Shounen/Crossdressing\nKana Sakuragi is an excellent candidate for the job. Any job! She’s motivated and organized, and has a fantastic memory. So why has she interviewed at over 15 companies without receiving a single offer? She’s trying to keep a positive attitude, but it seems like her bad luck is only getting worse when a monster crashes her latest interview. As havoc ensues, she finds herself helping the magical girl who comes to their rescue and ends up with more than just her life in return. Meet the newest magical girl at Magilumiere Magical Girls Inc.!\n<br><br>\n(Source: VIZ Media)"
     },
     {
       "id": "tt20228550",
@@ -270,7 +270,7 @@
       "id": "tt32524882",
       "type": "series",
       "name": "The Do-Over Damsel Conquers The Dragon Emperor",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b164299-7kSWXw3GzEVP.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx164299-sXyEH1zfho8Q.jpg",
       "description": "Genres: Fantasy, Romance\nTags:Heterosexual/Dragons\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
