Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -43,12 +43,12 @@
     {
       "id": "tt27479417",
       "type": "movie",
-      "name": "BanG Dream! It's MyGO!!!!! Movie",
+      "name": "BanG Dream! It's MyGO!!!!!: Haru no Hidamari, Mayoi Neko",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173174-PhUFHaaVnvgv.png",
       "behaviorHints": {
         "defaultVideoId": "tt27479417"
       },
-      "description": "Genres: Drama, Music\nTags:Band/Primarily Female Cast\nCompilation films of <i>BanG Dream! It's MyGO!!!!!</i>"
+      "description": "Genres: Drama, Music\nTags:Band/Primarily Female Cast\nCompilation film of <i>BanG Dream! It's MyGO!!!!!</i>. The first of the Bandori MyGO compilation movie duology."
     },
     {
       "id": "tt33318428",
