--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -11,7 +11,7 @@
       "id": "tt30217403",
       "type": "series",
       "name": "DAN DA DAN",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171018-4fYrq5E9Jv1m.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171018-2ldCj6QywuOa.jpg",
       "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Urban Fantasy/Youkai/Aliens/Surreal Comedy/Male Protagonist/Female Protagonist/Heterosexual/Shounen/Cult/Nudity\nThis is a story about Momo, a high school girl who comes from a family of spirit mediums, and her classmate Okarun, an occult fanatic. After Momo rescues Okarun from being bullied, they begin talking. However, an argument ensues between them since Momo believes in ghosts but denies aliens exist, and Okarun believes in aliens but denies ghosts exist.\n<br><br>\nTo prove to each other what they believe in is real, Momo goes to an abandoned hospital where a UFO has been spotted and Okarun goes to a tunnel rumored to be haunted. To their surprise, they each encounter overwhelming paranormal activities that transcend comprehension. Amid these predicaments, Momo awakens her hidden power and Okarun gains the power of a curse to overcome these new dangers! Their fateful love begins as well!?\n<br><br>\nThe story of the occult battle and adolescence starts!<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episode 1 before the Japanese television premiere occurred at Anime Expo July 6, 2024. <br>\n- Episodes 1-3 titled as <b>DAN DA DAN: FIRST ENCOUNTER</b> was pre-screened in advance in theaters on August 31, 2024 in Asia, September 7, 2024 in Europe and September 13, 2024 in North America. The regular TV broadcast begins October 2024.</i>"
     },
     {
@@ -75,7 +75,7 @@
       "type": "series",
       "name": "Sword Art Online Alternative: Gun Gale Online II",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167141-S4L4KKmuvM9L.jpg",
-      "description": "Genres: Action, Sci-Fi\nTags:Female Protagonist/Guns/Video Games\nThe second season of <i>Sword Art Online Alternative: Gun Gale Online</i>.\n<br><br>\n<i>Note: On June 17, 2024, Studio 3Hz announced their acquisition by A-1 Pictures. The GGO Project would continue to be handled by the same staff, now working under their new studio's name. </i>"
+      "description": "Genres: Action, Sci-Fi\nTags:Female Protagonist/Guns/Video Games\nThe second season of <i>Sword Art Online Alternative: Gun Gale Online</i>.\n<br><br>\nLLENN, M, Fukaziroh, and Pitohui form the strongest team, LPFM for short, and enter a new battle royale death match tournament that was annouced out of the blue.<br><br>\n\nLPFM is eyed as the top favorite candidate team to win, but the team will have to endure several rigorous ordeals to get there: a playing field that sinks into the ocean with the passage of time, an unknown area hidden in the middle of the map, and an anonymous team conspiracy.<br><br>\n\nIn addition to all of this, all players will have to follow some shocking special rules if they want to play the game and win…<br><br>\n(Source: Aniplex USA)<br><br>\n\n<i>Note: On June 17, 2024, Studio 3Hz announced their acquisition by A-1 Pictures. The GGO Project would continue to be handled by the same staff, now working under their new studio's name. </i>"
     },
     {
       "id": "tt29485149",
@@ -89,7 +89,7 @@
       "type": "series",
       "name": "Blue Exorcist -Beyond the Snow Saga-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176311-OZudERHrpJJ0.jpg",
-      "description": "Genres: Action, Fantasy, Supernatural\nTags:Urban Fantasy/Super Power/Shounen/Male Protagonist\nSequel to <i>Ao no Exorcist: Shimane Illuminati-hen.</i>"
+      "description": "Genres: Action, Fantasy, Supernatural\nTags:Urban Fantasy/Super Power/Shounen/Male Protagonist\nSequel to <i>Ao no Exorcist: Shimane Illuminati-hen.</i> <br><br>\n\nUncover the dark side of the Knights of the True Cross and the mystery of the \"Blue Night\"!<br><br>\n\nBrothers Rin and Yukio head to Lake Towada in Aomori to search for Shura, who had suddenly disappeared. There, they find Shura’s birthplace – the place where Shiro became her guardian. As their search continues, Rin and Yukio discover the fate that awaits Shura.\n<br><br>\nMeanwhile, Lightning, one of the Arch Knights, arrives at the Japan Branch of the Knights of the True Cross and begins his investigation into the Illuminati. Lightning deduces that everything began on the “Blue Night,” as he gradually steps into the dark side of the Knights of the True Cross….\n<br><br>\n(Source: Aniplex USA)"
     },
     {
       "id": "tt30689669",
@@ -152,7 +152,7 @@
       "type": "series",
       "name": "Demon Lord 2099",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163135-NjvXyXvTYSHH.jpg",
-      "description": "Genres: Action, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Demons/Magic/Male Protagonist/Primarily Adult Cast\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
+      "description": "Genres: Action, Comedy, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Demons/Magic/Male Protagonist/Primarily Adult Cast\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
     },
     {
       "id": "tt29141921",
@@ -199,12 +199,12 @@
     {
       "id": "tt22249034",
       "type": "series",
-      "name": "Rurouni Kenshin: Meiji Kenkaku Romantan - Kyoto Douran",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171637-DhtxarIIQnIb.jpg",
-      "description": "Genres: Action, Adventure, Drama, Romance\nTags:Samurai/Swordplay/Male Protagonist/Historical/Shounen\nThe second season of <i>Rurouni Kenshin: Meiji Kenkaku Romantan (2023)</i>."
+      "name": "Rurouni Kenshin -Kyoto Disturbance-",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b171637-h17RbEFtR0rQ.png",
+      "description": "Genres: Action, Adventure, Drama, Romance\nTags:Samurai/Swordplay/Male Protagonist/Historical/Shounen\nThe second season of <i>Rurouni Kenshin: Meiji Kenkaku Romantan (2023)</i>. <br><br>\n\nA phantom of the Bakumatsu who must be taken down. All the answers you desire are in Kyoto!<br><br>\n\n(Source: Aniplex USA)"
     },
     {
-      "id": "tt28299608",
+      "id": "tt21939220",
       "type": "series",
       "name": "MF GHOST Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171642-A9JRc46pEjpe.png",
@@ -222,14 +222,7 @@
       "type": "series",
       "name": "Party kara Tsuihou sareta Sono Chiyushi, Jitsu wa Saikyou ni Tsuki",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174043-aHYSmA5B76TZ.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nThe story follows Raust, a healer who can only use one basic spell and is expelled from a first-class party for being too weak. While the leader of that party realizes how great his abilities actually are after hiring another healer, Raust finds new friends like Narsena who support him and his rise to the top.<br><br>\n(Source: Crunchyroll News)"
-    },
-    {
-      "id": "tt32832435",
-      "type": "series",
-      "name": "Good Bye, Dragon Life",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176053-HfPo4pUm6Ktg.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Dragons/Rural/Male Protagonist/Monster Girl\nLong ago, the most ancient of divine dragons was slain by a human. The mighty dragon accepted its death when suddenly, it was reborn as Dolan, a man who lives in a quiet village. While spending another peaceful day toiling in the fields, he meets Celina, a half-human, half-snake creature looking for a partner. The unlikely duo become friends, but challenges lie ahead that threaten their new bond.\n<br><br>\n(Source: Cunchyroll)"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Magic\nThe story follows Raust, a healer who can only use one basic spell and is expelled from a first-class party for being too weak. While the leader of that party realizes how great his abilities actually are after hiring another healer, Raust finds new friends like Narsena who support him and his rise to the top.<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt32501772",
@@ -237,6 +230,13 @@
       "name": "Saikyou no Shien-shoku [Wajutsushi] Dearu Ore wa Sekai Saikyou Clan wo Shitagaeru",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177104-8fQUQdXGZG8j.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Psychological\nTags:Male Protagonist/Magic/Seinen/Swordplay\nNoel has grown up idolizing his grandfather, a legendary adventurer of the class known as Seekers. But when it comes time for Noel to set out on his own, much to his dismay, he turns out to be a Talker: a support class with meager abilities. But Noel’s got ambition in spades–and the smarts to match–so he’s determined to do whatever it takes to make the world know his name!<br>\n<br>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt32832435",
+      "type": "series",
+      "name": "Good Bye, Dragon Life",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176053-HfPo4pUm6Ktg.jpg",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Dragons/Rural/Male Protagonist/Monster Girl\nLong ago, the most ancient of divine dragons was slain by a human. The mighty dragon accepted its death when suddenly, it was reborn as Dolan, a man who lives in a quiet village. While spending another peaceful day toiling in the fields, he meets Celina, a half-human, half-snake creature looking for a partner. The unlikely duo become friends, but challenges lie ahead that threaten their new bond.\n<br><br>\n(Source: Cunchyroll)"
     },
     {
       "id": "tt13840232",
